# source

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  grammar.bnf  ideas.md  refactoring-todos.md  test.sh  test.src  test.txt  todo.md  update-cg-tests.sh  update-test.sh
editor/vscode/: gen.ts  language-configuration.json  package-lock.json  package.json  tsconfig.json
editor/vscode/syntaxes/: src_lang.tmGrammar.json
examples/: hello.src  raylib.src  sdl3.src
include/srcc/: AST.ast  AST.inc  ClangForward.hh  Macros.hh  ParseTree.ast  ParseTree.inc  ParseTree.td  Tokens.inc  macros.hh
include/srcc/AST/: AST.hh  DeclName.hh  Enums.hh  Eval.hh  Printer.hh  Stmt.hh  Type.hh
include/srcc/CG/: ABI.hh  CodeGen.hh  IR.hh
include/srcc/CG/IR/: CMakeLists.txt  IR.hh  IR.td  IRDialect.td  IREnums.td  IRInterfaces.td  MLIRFormatters.hh
include/srcc/Core/: Constants.hh  Core.hh  Diagnostics.hh  Location.hh  Serialisation.hh  Token.hh  Utils.hh
include/srcc/Driver/: Driver.hh
include/srcc/Frontend/: ParseTree.hh  Parser.hh  Sema.hh
lib/: Core.ccm  Driver.ccm  Utils.ccm  srcc.ccm  utils.ccm
lib/AST/: AST.ccm  Enums.ccm  Eval.ccm  Printer.ccm  Stmt.ccm  Type.ccm
lib/CG/: CodeGen.ccm
lib/Core/: Constants.ccm  Core.ccm  LangOpts.ccm  Token.ccm  Utils.ccm
lib/Driver/: Driver.ccm
lib/Eval/: Eval.ccm
lib/Frontend/: Parser.ccm  Sema.ccm  Token.ccm  Verifier.ccm
src/: Core.cc  Driver.cc  Main.cc  main.cc
src/AST/: AST.cc  Dependence.cc  Eval.cc  Serialiser.cc  Stmt.cc  Type.cc
src/AST/VM/: ByteCodePrinter.cc  Eval.cc  Executor.cc  Ops.inc  Ops.td  VMInternal.hh
src/CG/: ABI.cc  CGEval.cc  CGLLVM.cc  CodeGen.cc  Emit.cc  IR.cc  LLVMCodeGen.cc
src/CG/IR/: IRDialect.cc  IRLowering.cc  IROps.cc  IRPrinter.cc  IRTransforms.cc  Lowering.cc  Ops.cc  Printer.cc  Transforms.cc
src/Core/: Constants.cc  Core.cc  Diagnostics.cc  Location.cc  StoredInteger.cc  Token.cc  Utils.cc
src/Driver/: Driver.cc
src/Eval/: Eval.cc
src/Frontend/: .Sema.cc.swp  CXXImport.cc  Lexer.cc  Loader.cc  ParseTree.cc  Parser.cc  Preamble.cc  Sema.cc  SemaBuild.cc  SemaCXX.cc  SemaCall.cc  SemaInit.cc  SemaTranslate.cc  Template.cc  Verifier.cc  preamble.src
std/: preamble.src  runtime.cc  runtime.src
test/CG/: array-decay.src  arrays.src  as.src  assert.src  autoderef.src  binary-ops.src  break-continue.src  bug-if-results.src  builtin-memcpy.src  builtin-op-eq.src  builtin-ptradd.src  c-import.src  closures.src  complex-mrvalue.src  compound-assign.src  const-mrvalue.src  copy.src  cxx-inline.src  defer.src  delete-conditional.src  deleter.src  enum.src  exp.src  for.src  gc-procs.src  if.src  import-source-module.src  indirect-call.src  inline.src  int-unsigned-literal.src  intent.src  ir-fold.src  local-decl.src  loop.src  macro-import.src  mangling.src  match-no-cond.src  match.src  mrvalue-call.src  nil.src  (+26 more)
test/CGLLVM/: assert.src  c-import.src  if.src  indirect-call.src  local-decl.src  noreturn.src  struct-copy.src  struct.src  while.src
test/Driver/: crash-enoent.src  crash-non-verify-mode.src
test/Eval/: assert-stringify.src  assert.src  binary-ops-overflow.src  binary-ops.src  deleter.src  fact.src  for.src  if.src  import.src  indirect-call.src  intent.src  interp-simple.src  invalid-local-ref.src  local-decl.src  loop.src  malloc.src  optionals.src  overload.src  proc-args.src  proc-ret.src  ptr-cmp.src  ptr.src  ranges.src  small-ints.src  steps.src  struct-copy.src  swap.src  template.src  types-as-values.src  variadic.src  while.src
test/IR/: move-analysis.src  optional-analysis.src
test/Lexer/: all.src  integer-literal.src  pragma-include-errs.src  pragma-include.src
test/Lexer/Inputs/: include.src  include.txt
test/Parser/: assert.src  ast-dump-per-cent.src  attrs.src  binary.src  brackets.src  bug-1.src  dot-dot.src  export-program.src  export.src  for.src  if.src  int_way_too_big.src  intent-dump.src  intent.src  internal-in-user-code.src  local-decl.src  loop.src  match-no-cond.src  match.src  missing-semicolon.src  operator-overloading.src  postfix.src  preamble-invalid-program-name.src  preamble-missing-module-name.src  preamble-missing-program-name.src  preamble-program.src  proc-args.src  proc-body.src  proc-proc-args.src  proc-template.src  ptr.src  quote-eof.src  quote.src  range-types.src  semicolon.src  static-var.src  stmt.src  struct.src  tuple.src  variadic.src  (+2 more)
test/Sema/: addressof-struct.src  array-arithmetic.src  array-decay.src  arrays.src  as.src  assert.src  associated-procs.src  autoderef.src  binary-ops-edge-cases.src  bool.src  break-continue.src  builtin-init.src  builtin-memcpy.src  builtin-print.src  builtin-ptradd.src  builtin_op.src  c-import.src  c-tag-type-shadowing.src  capture-deleter.src  complete-type.src  copy.src  crash-invalid-init-eval.src  crash-param-ref.src  cxx-typedef.src  duplicate-instantiation.src  enum.src  enums-cxx.src  ffi-types.src  for.src  global-scope.src  if-mrvalue.src  if.src  import-open.src  import-source-module.src  in-assign.src  incomplete-struct.src  inline.src  int-conv.src  int-min-max.src  int-unsigned-literal.src  (+50 more)
test/inputs/: c-tag-type-shadowing.h  cxx-enum.hh  inline.h  macros.h  module.src  opaque.hh  typedef.h
tools/: ASTGen.cc  CMakeLists.txt  Tablegen.cc  VMTablegen.cc
